# MWMuscle

./: .gitignore  CMakeLists.txt  README.txt  config.txt
examples/: SystemParameters_  sendReport.py  sendReport_template.py  test1  test1.json  visualizePoseStudyMatrix.py  visualizeResults.py
examples/results/: CasSys_PushedMuscleInputParametersELLIPSOID_PUSH_THROUGH.txt  MuscleLog_CasSys_PushedMuscle_PushedMuscle.txt  solver_log_CasSys_PushedMuscle.txt
src/: main.cpp
src/pythonScripts/: plot_muscleLength.py  plot_muscle_logs.py
src/simpleSimulation/: SSBody.cpp  SSBody.h  SSMeshes.cpp  SSMeshes.h  SSMuscle.cpp  SSMuscle.h  SSTissue.h  SimulationManager.cpp  SimulationManager.h  VTKSimViewerSimple.cpp  VTKSimViewerSimple.h  casadiBackUp.cpp  casadiSystem.cpp  casadiSystem.h
src/utils/: ConfigLoader.h  MWMath.h  ModelBuilder.h  rawSimulation.cpp  rawSimulation.h  utility.h
